            - Routine turaevViro() now always runs in the current thread,
              even if a progress tracker was passed.
            - Routine connectedSumWith() now adds fewer tetrahedra (thanks
              to Adele Jackson).
            - Changed maximalForestInSkeleton() to return by value
              instead of returning through a reference argument.
            - Routine enterTextTriangulation() is now deprecated; this
              is a relic from Regina's ancient past.
        Class Triangluation<4>:
            - All of the changes listed for Triangulation<dim> above.
            - Overhauled retriangulate() to be faster, more generic, and
              support actions that take an isomorphism signature as well as
              a full triangluation.  This function is now also available
              through Python, and can take a pure Python function as its
              action argument.  It no longer runs in the background (even if a
              progress tracker is passed), and it now throws an exception
              if the triangulation has multiple components.
            - Routine simplifyExhaustive() no longer runs in the background
              (even if a progress tracker is passed), and it now throws an
              exception if the triangulation has multiple components.
        Class TrieSet:
            - This is no longer a template class (though its member
              functions are still templated on the bitmask type).
            - Added move/copy constructors and move/copy assignment operators.
            - Added member and global swap() functions.
            - Added short and detailed output functions.
        Class TriSolidTorus:
            - Routine formsTriSolidTorus() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.