@@ -34,14 +34,15 @@
 
 namespace regina {
 
-void Triangulation<3>::maximalForestInBoundary(std::set<Edge<3>*>& edgeSet,
-        std::set<Vertex<3>*>& vertexSet) const {
+std::set<Edge<3>*> Triangulation<3>::maximalForestInBoundary() const {
     ensureSkeleton();
 
-    vertexSet.clear();
-    edgeSet.clear();
+    std::set<Vertex<3>*> vertexSet;
+    std::set<Edge<3>*> edgeSet;
     for (auto bc : boundaryComponents())
         stretchBoundaryForestFromVertex(bc->vertex(0), edgeSet, vertexSet);
+
+    return edgeSet;
 }
 
 void Triangulation<3>::stretchBoundaryForestFromVertex(Vertex<3>* from,
