@@ -1,0 +1,7 @@
+Internal edge of degree 3
+Internal edge of degree 3
+Internal edge of degree 3
+Internal edge of degree 3
+Boundary edge of degree 1
+Boundary edge of degree 1
+Boundary edge of degree 1
